--- a/client/src/Footer.css
+++ b/client/src/Footer.css
@@ -16,25 +16,30 @@ footer{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 80%;
+    justify-content: center;
     align-items: center;
+    width: 80%;
     padding-top: 50px;
+    gap: 50px;
   }
   .contact-boxes{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-  }
 
+  }
+  .contact-logos{
+  }
   .footer-bottom{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     width: 80%;
     align-items: center;
     padding-bottom: 50px;
+    gap: 580px;
+
     }
     .footer-links-top{
       margin: 0px;
@@ -49,10 +54,7 @@ footer{
     .footer-links-bottom{
       margin: 10px;
     }
-    .contact-logos{
-      height: 50px;
-      width: auto; 
-    }
+
     .contact-boxes{
         display: flex;
         flex-direction: column;
