--- a/client/src/ServicesPage.css
+++ b/client/src/ServicesPage.css
@@ -4,7 +4,7 @@
   }
 
 .page-container{
-font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*------------------------------------------------------------*/
@@ -26,25 +26,33 @@ font-family: Arial, Helvetica, sans-serif;
     width: 200px;
     height: 30px;
 }
-.hero-section h1,
-.hero-section h2,
-.hero-section .hero-button {
-  margin-bottom: 20px; 
+.hero-section h1, .hero-section h2, .hero-section .hero-button {
+    margin-bottom: 20px; 
 }
 
 /*------------------------------------------------------------*/
-
-.how-we-work-section{
+.how-we-work-section-container{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content:center;
-    align-items:center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.grid-title{
+    font-size: 48px;
     padding-top: 300px;
+    padding-bottom: 30px;
+    font-weight: bold;
+    color:blue
+}
+.how-we-work-section{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, auto); 
     padding-bottom: 300px;
 }
 
-.work-cards{
+.work-cards-1, .work-cards-2, .work-cards-3, .work-cards-4, .work-cards-5, .work-cards-6{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,25 +65,83 @@ font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     max-width: 250px;
 }
+
+.work-cards-1{
+    grid-column: 1;
+    grid-row: 1;
+}
+.work-cards-2{
+    grid-column: 3;
+    grid-row: 1;
+}
+.work-cards-3{
+    grid-column: 5;
+    grid-row: 1;
+}
+.work-cards-4{
+    grid-column: 1;
+    grid-row: 3;
+}
+.work-cards-5{
+    grid-column: 3;
+    grid-row: 3;
+}
+.work-cards-6{
+    grid-column: 5;
+    grid-row: 3;
+}
 .work-images{
     order: -1;
-    height: 40px;
+    height: 48px;
     width: auto;
 }
-.arrows{
+.arrows-1, .arrows-2, .arrows-3, .arrows-4, .arrows-5, .arrows-6{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 48px;
+}
+.arrows-1{
+    grid-column: 2;
+    grid-row: 1;
+}
+.arrows-2{
+    grid-column: 4;
+    grid-row: 1;
+}
+.arrows-3{
+    grid-column: 1;
+    grid-row: 2;
+}
+.arrows-4{
+    grid-column: 2;
+    grid-row: 3;
+}
+.arrows-5{
+    grid-column: 4;
+    grid-row: 3;
+}
+.arrows-6{
+    grid-column: 5;
+    grid-row: 2;
+    padding:50px
 }
 
 /*------------------------------------------------------------*/
 
-.cycle-section{
+.cycle-section-container{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding-top: 300px;
-    padding-bottom: 300px;
+    margin-bottom: 100px;
+}
+.cycle-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, auto);
+    gap: 40px;
 }
 .cycle-cards{
     display: flex;
@@ -86,8 +152,9 @@ font-family: Arial, Helvetica, sans-serif;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 10px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.101);
-    padding:20px;
-    width: 400px;
+    gap: 70px;
+    padding: 10px;
+
 }
 .cycle-images-1{
     order: -1;
