--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -3,60 +3,43 @@
   padding:0;  
 }
 
-footer{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(182, 184, 183);
+  .paige-container-footer{
     font-family: Arial, Helvetica, sans-serif;
-    color: blue;
-  }
-  .footer-top{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    background-color: #d8d7d7a0;
+    display: grid;
+    grid-template-columns: repeat(12, 80px);
+    column-gap: 20px;
     justify-content: center;
+  }
+  .footer-section-container{
+    grid-column: 1/13;
+  }
+  .footer-section-container-flex-top{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 50px;
+  }
+  .footer-section-container-flex-bottom{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 80%;
-    padding-top: 50px;
-    gap: 50px;
+    margin-bottom: 20px;
   }
   .contact-boxes{
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-
-  }
-  .contact-logos{
-  }
-  .footer-bottom{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    width: 80%;
     align-items: center;
-    padding-bottom: 50px;
-    gap: 580px;
-
-    }
-    .footer-links-top{
-      margin: 0px;
-    }
-    .footer-logo{
-      margin-top: 50px;
-      font-weight: bold;
-    }
-    .footer-links{
-      margin-top: 50px;
-    }
-    .footer-links-bottom{
-      margin: 10px;
-    }
-
-    .contact-boxes{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+  }
+  .contact-logos {
+    height: 60px;
+    width: auto;
+  }
+  .footer-logo{
+    font-weight: bold;
+    font-size: larger;
+  }
+  .footer-links-bottom{
+    margin-left: 10px;
+  }
