--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -26,6 +26,14 @@ footer{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+  }
+
+  .footer-bottom{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
   }
   .contact-logos{
