--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -1,6 +1,6 @@
 *, html {
     margin:0;
-    padding:0;  
+    padding:0;
 }
 
 .paige-container-homepaige{
@@ -46,7 +46,7 @@
 
 .services-section-container{
     grid-column: 1/13;
-    padding-top:100px;
+    padding-top: 100px;
     padding-bottom: 100px;
 }
 .services-section{
@@ -66,6 +66,11 @@
     border-radius: 10px;
     gap: 70px;
     padding: 10px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+.services-cards:hover {
+    cursor: pointer;
+    background-color: #a7abaf;
 }
 .services-images-1{
     order: -1;
