--- a/client/src/css/ApiTestPage.css
+++ b/client/src/css/ApiTestPage.css
@@ -1,9 +1,13 @@
 .apiTestContainer {
-  height: 100vh;
+  height: 600vh;
   width: 100%;
-  margin-top: 80px;
+  padding-top: 80px;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: #d8d7d7;
+}
+
+.margin_top {
+  margin-top: 100px;
 }
