--- a/client/src/css/FAQ.css
+++ b/client/src/css/FAQ.css
@@ -3,73 +3,124 @@
     padding:0;  
 }
 
-/*------------------------------------------------------------*/
+/*-----------------------Hero Section-------------------------------------*/
 
 .hero-section-FAQ{
-
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-top: 400px;
-    padding-bottom: 100px;
-    background-color: rgb(71, 71, 233);
-    background-image: url("../src/assets/warehouse-background.jpg");
-    background-size: cover;
-    background-blend-mode: lighten;
-
-    color: rgb(49, 31, 98)(55, 255, 255);
+    background-color: #d8d7d7;
+    width: 100%;
+    padding-top: 150px;
+}
+.hero-section-header{
+    color: #06368D;
+    font-weight: bold;
+    font-size: 50px;
 }
 
-/*------------------------------------------------------------*/
+/*-------------------------Accordian Section-----------------------------------*/
 
 .FAQ-paige-container{
-    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #d8d7d7;
-    display: grid;
-    grid-template-columns: repeat(12, 80px);
-    column-gap: 20px;
-    justify-content: center;
+    width: 100%;
+    padding-bottom: 100px;
 }
-.FAQ-grid-container{
-    grid-column: 1/13;
-}
-
-/*------------------------------------------------------------*/
-.wrapper{
+.wrapper-FAQ{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.accordian-header{
-margin: 60px;
+.accordian-header-FAQ{
+    color: #06368D;
+    margin: 20px;
 }
-.accordian{
+.accordian-FAQ{
     width: 500px;
     margin-bottom: 60px;
 }
-.item{
+.item-FAQ{
     background: #c1c0c0a0;
     margin-bottom: 5px;
     padding: 10px 20px;
     cursor: pointer;
 }
-.title{
-    color: #183cbd;
+.title-FAQ{
+    color: #06368D;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.content{
+.item-FAQ:hover{
+    background: #FFC857;
+}
+.item-FAQ.selected-FAQ {
+    background: #FFC857;
+}
+.question-text-FAQ{
+    color: #06368D;
+}
+.content-FAQ{
     color:#555252 ;
     max-height: 0;
     overflow: hidden;
     transition: all 0.5s cubic-bezier(0,1,0,1);
 }
-.content.show{
+.content-FAQ.show-FAQ{
     height: auto;
     max-height: 9999px;
     transition: all 0.5s cubic-bezier(1,0,1,0);
+}
+
+/*-------------------------Send Email Section-----------------------------------*/
+
+.email-container-FAQ{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #d8d7d7;
+    width: 100%;
+    padding-top: 100px;
+}
+.email-section-FAQ{
+    display: flex;
+    flex-direction: row;
+    align-items:normal;
+    gap: 200px;
+}
+.send-us-a-letter-section{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.callback-form-section{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.email-container-FAQ input{
+    border-radius: 5px;
+    min-width: 200px;
+    min-height: 30px;
+}
+.email-container-FAQ input:hover{
+    background-color: #FFC857;
+}
+.email-container-FAQ input:focus{
+    background-color: #FFC857;
+}
+.email-container-FAQ button{
+    border-radius: 5px;
+    background-color: #06368D;
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 15px;
+}
+.email-container-FAQ button:hover{
+    cursor: pointer;
+    background-color:#FFC857;
 }
