--- a/client/src/css/ServicesPage.css
+++ b/client/src/css/ServicesPage.css
@@ -3,73 +3,199 @@
     padding:0;  
   }
 
-.paige-container-servicepaige{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #d8d7d7;
-}
-
-/*------------------------------------------------------------*/
+/*------------------------HERO SECTION------------------------------------*/
 
 .hero-section-servicepaige{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-top: 400px;
+    background-color: #d8d7d7;
+    width: 100%;
+    padding-top: 150px;
     padding-bottom: 100px;
-    background-color: rgb(71, 71, 233);
-    background-image: url("../src/assets/warehouse-background.jpg");
-    background-size: cover;
-    background-blend-mode: lighten;
-    color: rgb(49, 31, 98)(55, 255, 255);
 }
-.hero-button-servicepaige{
-    border-radius: 5px;
-    width: 200px;
-    height: 30px;
+.servicepaige-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 50px;
 }
-.hero-section-servicepaige h1, .hero-section-servicepaige h2, .hero-section-servicepaige .hero-button-servicepaige {
-    margin-bottom: 20px; 
+.servicepaige-header-text{
+    color: #06368D;
 }
-.hero-button-servicepaige {
-    cursor: pointer;
+
+/*--------------------------Cycle Section----------------------------------*/
+
+.cycle-section-servicepaige{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
-/*------------------------------------------------------------*/
-.how-we-work-section-container{
+.cycle-cards-servicepaige{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid #06368D;;
+    border-radius: 10px;
+    gap: 70px;
+    padding: 10px;
+}
+.cycle-cards-servicepaige:hover{
+    background-color: #FFC857;
+    cursor: pointer;
+}
+.cycle-images-1-servicepaige{
+    order: -1;
+    height: 40px;
+    width: auto;
+}
+.cycle-arrows-servicepaige{
+    font-size: 30px;
+}
+.cycle-cards-text,
+.cycle-images-1-servicepaige,
+.cycle-arrows-servicepaige,
+.boxprice-header-text
+{
+    color: #06368D;
+}
+
+/*----------------------------Box Price Section--------------------------------*/
+.boxprice-section-servicepaige{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #d8d7d7;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.boxprice-header-text{
+    padding-bottom: 50px;
+}
+.media-scroller-servicepaige{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 21%;
+    gap: 20px;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.media-element-servicepaige{
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
+    padding: 10px;
+    border: solid 3px #06368D;
+    border-radius: 10px;
+}
+.snaps-inline-servicepaige{
+    scroll-snap-type: inline mandatory;
+    scroll-padding-inline: 20px;
+}
+.snaps-inline-servicepaige > *{
+    scroll-snap-align: start;
+}
+.box-pictures-servicepaige{
+    height: auto;
+    inline-size: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+}
+.box-title-servicepaige{
+    font-weight: bold;
+    font-size: x-large;
+}
+.price-per-month-servicepaige,
+.box-measurments-servicepaige,
+.box-title-servicepaige{
+    color: #06368D;
+}
+
+.media-scroller-servicepaige::-webkit-scrollbar {
+    width: 8px;
+    height: 20px; 
+    padding-bottom: 10px;
+}
+
+.media-scroller-servicepaige::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+.media-scroller-servicepaige::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.media-scroller-servicepaige::-webkit-scrollbar-track {
+    background: #f7efef;
+    border-radius: 10px;
+}
+
+/*----------------------------How We Work Section--------------------------------*/
+
+.how-we-work-section-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FFC857;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .grid-title{
     font-size: 48px;
-    padding-top: 300px;
-    padding-bottom: 30px;
     font-weight: bold;
-    color:blue
+    color: #06368D;
+    padding-bottom: 50px;
 }
 .how-we-work-section{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, auto); 
-    padding-bottom: 300px;
 }
 
 .work-cards-1, .work-cards-2, .work-cards-3, .work-cards-4, .work-cards-5, .work-cards-6{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid rgb(0, 0, 0);
+    border: 3px solid #06368D;
     border-radius: 10px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.101);
+    background-color: #d8d7d7;
     padding: 20px;
     margin: 5px;
     text-align: center;
     max-width: 250px;
 }
-
+.number-badge-servicepaige{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #06368D; 
+    color: white;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    z-index: 1;
+}
+.card-text-servicepaige{
+    color: #06368D;
+}
 .work-cards-1{
     grid-column: 1;
     grid-row: 1;
@@ -104,6 +230,7 @@
     justify-content: center;
     align-items: center;
     font-size: 48px;
+    color: #06368D;
 }
 .arrows-1{
     grid-column: 2;
@@ -131,42 +258,45 @@
     padding:50px
 }
 
-/*------------------------------------------------------------*/
+/*-------------------------Something-Else section-----------------------------------*/
 
-.cycle-section-container{
+.something-else-container-servicepaige{
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-bottom: 100px;
+    background-color: #d8d7d7;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px; 
+    gap: 50px;
 }
-.cycle-section{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, auto);
-    gap: 40px;
-}
-.cycle-cards{
+.something-else-info-boxes{
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 100px;
+}
+.something-else-cards{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    border: 2px solid rgb(0, 0, 0);
+    cursor: pointer;
+    border: 3px solid #06368D;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.101);
-    gap: 70px;
-    padding: 10px;
-
+    padding: 20px;
 }
-.cycle-images-1{
-    order: -1;
-    height: 40px;
-    width: auto;
+.something-else-cards:hover{
+    background-color:#FFC857;
+    cursor: pointer;
 }
-.cycle-arrows{
-    font-size: 30px;
+.something-else-header-text{
+    font-weight: bold;
+    padding-bottom: 20px;
 }
-
-/*------------------------------------------------------------*/
+.something-else-text{
+    padding-top: 20px;
+}
+.something-else-header-text,
+.something-else-text{
+    color: #06368D;
+}
+/*----------------------------------------------------------------------------------*/
