--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: #333;
+  background-color: #D9D9D9;
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
@@ -66,15 +66,15 @@ body {
 
 h1 {
   font-weight: 700;
-  color: #000228;
+  color: #06368D;
 }
 
 h2 {
   font-weight: 400;
-  color: #000228;
+  color: #06368D;
 }
 
 p {
   font-weight: 300;
-  color: #000228;
+  color: #06368D;
 }
