--- a/client/src/css/PaymentPage.css
+++ b/client/src/css/PaymentPage.css
@@ -1,5 +1,3 @@
-/* Основные стили для страницы оплаты */
-
 .payment_header {
     margin: 167px 0 60px;
     width: 100%;
@@ -10,7 +8,6 @@
     z-index: 1;
 }
 
-/* Заголовки H1 и H2 */
 .h1_payment, .h2_payment {
     text-align: center;
 }
@@ -27,7 +24,6 @@
 
 
 
-/* Контент страницы */
 .payment_content {
     background-color: #d9d9d9;
     display: flex;
@@ -39,7 +35,6 @@
 }
 
 
-/* Секции формы оплаты */
 .form_section_payment {
     margin-bottom: 40px;
     width: 80%;
@@ -55,7 +50,6 @@
     margin-bottom: 20px;
 }
 
-/* Группы ввода */
 .form_group_payment {
     display: flex;
     flex-direction: column;
@@ -96,7 +90,6 @@
 
 
 
-/* Чекбокс для совпадения адреса */
 .checkbox_container {
     display: flex;
     flex-direction: row;
@@ -116,23 +109,22 @@
     appearance: none;
     width: 20px;
     height: 20px;
-    background-color: #d8d7d7; /* Цвет фона, когда не активен */
-    border: 2px solid #06368d; /* Обводка */
-    border-radius: 4px; /* Закругленные углы */
+    background-color: #d8d7d7; 
+    border: 2px solid #06368d; 
+    border-radius: 4px;
     cursor: pointer;
 }
 
 .checkbox_container input[type="checkbox"]:checked {
-    background-color: #06368d; /* Цвет фона, когда активен */
-    border-color: #06368d; /* Цвет обводки остается синим */
+    background-color: #06368d;
+    border-color: #06368d;
 }
 
 .checkbox_container input[type="checkbox"]:focus {
-    outline: none; /* Убираем стандартную обводку при фокусе */
+    outline: none;
 }
 
 
-/* Кнопка "Pay" */
 .pay_btn_payment {
     background-color: #06368d;
     color: white;
@@ -151,7 +143,6 @@
 
 
 
-/* Группы ввода и кнопки "Редактировать" для Billing */
 .group_billing {
     display: flex;
     justify-content: space-between;
