--- a/client/src/css/Calender.css
+++ b/client/src/css/Calender.css
@@ -28,15 +28,15 @@
     font-size: large;
 }
 .react-calendar__tile:hover {
-    background-color: rgb(62, 103, 181) !important;
+    background-color: #06368D !important;
     color: rgb(255, 255, 255)
 }
 .react-calendar__tile--active {
-    background-color: rgb(62, 103, 181)!important;
+    background-color: #06368D !important;
     color: rgb(255, 255, 255);
 }
 .react-calendar__tile--now {
-    background: #f4ed70;
+    background: #FFC857;
 }
 .react-calendar__navigation__prev2-button,
 .react-calendar__navigation__next2-button {
