--- a/client/src/css/HomePage.css
+++ b/client/src/css/HomePage.css
@@ -43,14 +43,14 @@
 
 .services-section-container {
     width: 100%;
-    background-color: #FFC857; /* Yellow background */
+    background-color: #FFC857;
     padding-top: 100px;
     padding-bottom: 100px;
 }
 .services-section-position{
-    max-width: 800px;    /* Control the width of content for proper alignment */
-    margin: 0 auto;         /* Center the content horizontally */
-    padding: 0 20px;        /* Add padding to avoid content touching edges */
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -218,7 +218,7 @@
 .work-cards-4-homepaige, 
 .work-cards-5-homepaige, 
 .work-cards-6-homepaige{
-    position: relative; /* Needed for absolute positioning of the number badge */
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -302,19 +302,19 @@
     padding:50px
 }
 .number-badge {
-    position: absolute; /* Allows you to position it relative to the nearest positioned ancestor */
-    top: 10px; /* Adjust this value to move it down */
-    left: 10px; /* Adjust this value to move it right */
-    background-color: #06368D; /* Background color for contrast */
-    color: white; /* Text color */
-    border-radius: 50%; /* Makes it round */
-    width: 30px; /* Fixed width */
-    height: 30px; /* Fixed height */
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #06368D;
+    color: white;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px; /* Font size for the number */
-    z-index: 1; /* Ensures it's on top of other content */
+    font-size: 20px;
+    z-index: 1;
 }
 
 /*---------------------------FAQ-Section--------------------------------------------------*/
