--- a/admin-client/src/css/HomePaige.css
+++ b/admin-client/src/css/HomePaige.css
@@ -13,8 +13,7 @@
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 20px;
 }
-.other-content-HomePaige{
-    padding: 100px;
+.picture-HomePaige{
     display: flex;
     justify-content: center;
 }
